tests/compile_fail/logic_macro_malformed_assign_bundle.stderr
error: expected `=`
 --> tests/compile_fail/logic_macro_malformed_assign_bundle.rs:6:30
  |
6 |             assign_bundle out: input;
  |                              ^
